@@ -11,8 +11,11 @@ PetCare manages your fighting pet needs:
 	shows your current aggro compared to yout pet's one
 	can play a sound and or show an alert when your pet falls under a customizable level of health
 	can play a sound if you enter a non PVP instance with Growl active
+	alerts can be disabled in PVP
 ]])
-self:RelNotes(1,0,0,[[
+self:RelNotes(1,0,1,[[
+Alerts Can be  disabled in PVP
+]])self:RelNotes(1,0,0,[[
 First public release
 ]])
 end
